TODO
    defaultconfig.php?
    translation-hints
    uploader localization from back-end

    document for developers: uploaders config.php and LANG.php has to be loaded before init.php
    document usage of uploader() (params are not safe!)
    no config of exts from back-end
    more error messages

    include sk

Version 1alpha5 - released TODO
cmb	updated to Plupload 1.5.3
cmb	updated to jQuery 1.7.2
cmb	added error message, if JS is disabled
cmb	added optional selectboxes for front-end use
cmb	fixed bug: parameters were not properly urlencoded

Version 1alpha4 - internally released 2012-04-07
cmb	added function that can be called from a CMSimple page

Version 1alpha3 - released 2012-04-02
cmb	fixed bug: plugin back-end was always displayed, when register_globals is on (reported by Tata)
cmb	made minor cosmetic changes
cmb	extended copyright to 2012
cmb	prohibited direct access to init.php
cmb	implemented system check
cmb	added plugin icon
cmb	updated manual
cmb	prohibited upload to parent folders
cmb	added slovak translation (contributed by Tata)
cmb	added czech translations (contributed by oldnema)

Version 1alpha2 - released 2012-03-29
cmb	fixed bug: changing the selectbox was not possible under IE (reported by wolfgang_58)

Version 1alpha1 - released 2011-12-05
cmb	initial release