@@ -1,6 +1,7 @@
-#uploader-controls {margin: 16px 0 8px 8px}
-#uploader-controls select {}
+div.uploader-controls {margin: 16px 0 8px 8px}
+div.uploader-controls select {}
 iframe.uploader {width: 100%; height: 400px; border: none;}
+div.uploader_toggle {}
 
 img.uploader_plugin_icon {display: block; float: left; margin: -10px 10px 10px 0}
 p.uploader_license {clear: both; text-align: justify}
