@@ -10,6 +10,8 @@ $plugin_tx['uploader']['title_userfiles']="Userfiles";
 $plugin_tx['uploader']['label_type']="Type";
 $plugin_tx['uploader']['label_subdir']="Sub-Folder";
 $plugin_tx['uploader']['label_resize']="Resize";
+$plugin_tx['uploader']['label_expand']="Upload";
+$plugin_tx['uploader']['label_collapse']="Close";
 
 $plugin_tx['uploader']['message_no_js']="Javascript must be enabled in your browser to be able to upload files!";
 
