@@ -8,7 +8,9 @@ TODO
     no config of exts from back-end
     more error messages
 
+    license
     include sk
+    "namespaced" params and ids/classes
 
 Version 1alpha5 - released TODO
 cmb	updated to Plupload 1.5.3
@@ -16,6 +18,7 @@ cmb	updated to jQuery 1.7.2
 cmb	added error message, if JS is disabled
 cmb	added optional selectboxes for front-end use
 cmb	fixed bug: parameters were not properly urlencoded
+cmb	added uploader_collapsed() to display an initially hidden upload widget
 
 Version 1alpha4 - internally released 2012-04-07
 cmb	added function that can be called from a CMSimple page
